@@ -129,7 +129,10 @@ function give_acl ($id_user, $id_group, $access) {
 
     if (($access == "TM") AND ($admin == 0))
         return false;
-
+        
+    if (($access == "WM") AND ($admin == 0))
+        return false;
+	
 	return true;
 } 
 
